Improve measurement export
Fix https://github.com/qupath/qupath/issues/1769 in `MeasurementExporter`, but still need to fix it in `MeasurementExportCommand`.

Also made export faster when not requesting all the measurements in a table.